# tet-amr-rendering

./: CITATION.cff  CMakeLists.txt  LICENSE  README.md  benchmark.cpp  benchmark.h  build.sh  build_and_run.sh  common_code.h  density.cu  density.cuh  device_code.cu  device_code.h  environment.yml  main.cpp  owl_viewer_imgui.cpp  owl_viewer_imgui.h  parse_options.cpp  parse_options.h  renderer.cpp  renderer.h  renderer_common.cpp  renderer_common.h  submission.txt  viewer.cpp  viewer.h
benchmark/: README.md  benchmark.py  bvh_levels_benchmark.py  mri_tf_opacity_steps_benchmarks.py  refinement_threshold_benchmark.py
data/: .gitattributes
data/tf/: advection.xf  agulhas.xf  carp.xf  engine.xf  engine_refinement.xf  heptane.xf  mri.xf  torus.xf
data/tf/mri_steps/: mri.xf  mri_0.xf  mri_1.xf  mri_2.xf  mri_3.xf  mri_4.xf  mri_5.xf  mri_6.xf  mri_7.xf
imgui_tfe/: ColorMaps.cpp  ColorMaps.h  LookupTable.h  RGBAEditor.cpp  RGBAEditor.h  TFEditor.cpp  TFEditor.h
submodules/tet-amr-generate-data/: .clang-format  CMakeLists.txt  README.md  TetForest.cpp  TetForest.h  TetForest_file_utils.cpp  TetForest_vtk.cpp  Vec3.h
unstructured/: benchmark.cpp  benchmark.h  common_code.h  device_code.cu  device_code.h  main.cpp  parse_options.cpp  parse_options.h  render_mode_enums.h  renderer.cpp  renderer.h  renderer_common.cpp  viewer.cpp  viewer.h
util/: CMakeLists.txt  MD5.cpp  MD5.h  file_cache.h
util/tool/: tf_reduce_opacity_progressive.cpp
